# minGRU-pytorch

./: .gitignore  graphs.ipynb  pyproject.toml  testing.ipynb  train.py  train_imdb.py  train_rnn_imdb.py
minGRU_pytorch/: CustomRNN.py  SimpleRNN.py  minGRU.py  minGRUC.py  minGRULM.py
