[tool.poetry]
name = "mingru-experiments"
version = "0.1.0"
description = ""
authors = ["tarolling <benitojoens@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
tqdm = "^4.67.1"
tensorboard = "^2.18.0"
ipykernel = "^6.29.5"
polars = "^1.18.0"
scikit-learn = "^1.6.0"
seaborn = "^0.13.2"
transformers = "^4.47.1"
kaggle = "^1.6.17"
nbconvert = "^7.16.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
